--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 					</div>
 				</div>
 				<!--	/slider-->
+				<!-- filter-->
+				<div class="filter">
+					<div class="wrapper">
+						<div class="filter__links"><a class="filter__link active" href="#">Частным клиентам</a><a class="filter__link" href="#">Корпоративные заказы</a></div>
+						<div class="filter__categories"> <a class="filter__category active" href="#">Любимое</a><a class="filter__category" href="#">Закуски</a><a class="filter__category" href="#">Салаты</a><a class="filter__category" href="#">Горячее</a><a class="filter__category" href="#">Суши и роллы</a><a class="filter__category" href="#">Супы</a><a class="filter__category" href="#">Детское</a><a class="filter__category" href="#">Десерты</a><a class="filter__category" href="#">Напитки</a></div>
+					</div>
+				</div>
+				<!--	/filter-->
 			</div>
 			<!-- footer-->
 			<footer class="footer"></footer>
