--- a/orders.html
+++ b/orders.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
-		<title>Навигация по страницам</title>
+		<title>Мои заказы</title>
 		<link rel="stylesheet" href="css/libs/swiper-bundle.min.css">
 		<meta name="robots" content="noindex, nofollow">
 		<link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
 	<body> 
 		<div class="page"> 
 						<!-- header-->
-						<header class="header">
+						<header class="header mobile-hide">
 							<div class="wrapper">
 								<div class="header__burger hamburger hamburger--squeeze js-drop-btn" data-drop="mobile-menu">
 									<div class="hamburger-box">
@@ -105,19 +105,83 @@
 						</header>
 						<!--	/header-->
 			<main class="content"> 
-				<!-- navpage-->
-				<div class="navpage">
-					<div class="wrapper">
-						<h1>Навигация по страницам</h1>
-						<ul> 
-							<li> <a href="home.html">Главная</a></li>
-							<li> <a href="agreement.html">Пользовательское соглашение</a></li>
-							<li> <a href="privacy.html">Политика конфиденциальности</a></li>
-							<li> <a href="orders.html">Мои заказы</a></li>
-						</ul>
+				<!-- orders-->
+				<div class="orders">
+					<div class="wrapper"> 
+						<!-- backtitle-->
+						<div class="backtitle"><a class="backtitle__arrow" href="#"> 
+								<svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+								</svg></a>
+							<h1 class="backtitle__text">Мои заказы</h1><a class="backtitle__cross" href="#"> </a>
+						</div>
+						<!--	/backtitle-->
+						<form class="orders__filter" action="#"> 
+							<div class="orders__filter-item"> 
+								<input id="ordersAll" type="radio" name="orders" checked>
+								<label for="ordersAll">Все</label>
+							</div>
+							<div class="orders__filter-item"> 
+								<input id="ordersDelivered" type="radio" name="orders">
+								<label for="ordersDelivered">Доставлены</label>
+							</div>
+							<div class="orders__filter-item"> 
+								<input id="ordersCancelled" type="radio" name="orders">
+								<label for="ordersCancelled">Отменены</label>
+							</div>
+						</form>
+						<div class="orders__items"> 
+							<div class="orders__item"> 
+								<div class="orders__item-content"> 
+									<div class="orders__status-text mobile-visible">Текущий</div>
+									<div class="orders__date">8 апреля 2054</div>
+									<div class="orders__num">№298456548 на 4 250₽</div>
+								</div>
+								<div class="orders__status"> 
+									<div class="orders__status-text mobile-hide">Текущий</div>
+									<div class="orders__status-icon orders__status-icon--current">
+										<svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M3.8 0C2.5 0 1.5 1 1.5 2.3V14H0.8C0.3 14 0 14.3 0 14.8V15.8C0 17.5 1.5 19 3.3 19H14.3C16.1 19 17.6 17.5 17.6 15.7V2.3C17.6 1.1 16.6 0 15.3 0H3.8ZM3.8 1.5H15.3C15.7 1.5 16.1 1.8 16.1 2.3V15.8C16.1 16.8 15.3 17.6 14.3 17.6C13.3 17.6 12.5 16.8 12.5 15.8V14.8C12.5 14.4 12.2 14.1 11.7 14H3V2.3C3 1.8 3.3 1.5 3.8 1.5ZM5.8 4C5.3 4 5 4.3 5 4.8C5 5.3 5.3 5.6 5.8 5.6C6.2 5.6 6.6 5.3 6.6 4.8C6.6 4.3 6.2 4 5.8 4ZM8.3 4C7.8 4 7.5 4.3 7.5 4.7C7.5 5.1 7.8 5.5 8.2 5.5H13.2C13.6 5.5 14 5.2 14 4.8C14 4.4 13.7 4 13.3 4H8.3ZM5.8 7C5.3 7 5 7.3 5 7.8C5 8.3 5.3 8.6 5.8 8.6C6.2 8.6 6.6 8.3 6.6 7.8C6.6 7.3 6.2 7 5.8 7ZM8.3 7C7.8 7 7.5 7.3 7.5 7.7C7.5 8.1 7.8 8.5 8.2 8.5H13.2C13.6 8.5 14 8.2 14 7.8C14 7.3 13.7 7 13.3 7H8.3ZM5.8 10C5.3 10 5 10.3 5 10.8C5 11.3 5.3 11.6 5.8 11.6C6.2 11.6 6.6 11.3 6.6 10.8C6.6 10.3 6.2 10 5.8 10ZM8.3 10C7.9 10 7.5 10.3 7.5 10.7C7.5 11.1 7.8 11.5 8.2 11.5H13.2C13.6 11.5 14 11.2 14 10.8C14 10.4 13.7 10 13.3 10H8.3ZM1.5 15.5H11V15.8C11 16.5 11.2 17 11.6 17.6H3.3C2.3 17.6 1.5 16.8 1.5 15.8V15.5Z" fill="white"></path>
+										</svg>
+									</div>
+								</div>
+							</div>
+							<div class="orders__item"> 
+								<div class="orders__item-content"> 
+									<div class="orders__status-text mobile-visible">Отменен</div>
+									<div class="orders__date">8 апреля 2054</div>
+									<div class="orders__num">№298456548 на 4 250₽</div>
+								</div>
+								<div class="orders__status"> 
+									<div class="orders__status-text mobile-hide">Текущий</div>
+									<div class="orders__status-icon orders__status-icon--cancelled">
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M10 0C4.5 0 0 4.5 0 10C0 15.5 4.5 20 10 20C15.5 20 20 15.5 20 10C20 4.5 15.5 0 10 0ZM10 1.5C14.7 1.5 18.5 5.3 18.5 10C18.5 14.7 14.7 18.5 10 18.5C5.3 18.5 1.5 14.7 1.5 10C1.5 5.3 5.3 1.5 10 1.5ZM13.2 6C13 6 12.8 6.1 12.7 6.2L10 8.9L7.3 6.2C7.1 6.1 6.9 6 6.7 6C6.3 6 6 6.3 6 6.7C6 6.9 6.1 7.1 6.2 7.2L8.9 10L6.2 12.7C5.9 13 5.9 13.5 6.2 13.8C6.5 14.1 7 14.1 7.3 13.8L10 11.1L12.7 13.8C13 14.1 13.5 14.1 13.8 13.8C14.1 13.5 14.1 13 13.8 12.7L11.1 10L13.8 7.3C14.1 7 14.1 6.5 13.8 6.2C13.7 6.1 13.5 6 13.2 6Z" fill="white"></path>
+										</svg>
+									</div>
+								</div>
+							</div>
+							<div class="orders__item"> 
+								<div class="orders__item-content"> 
+									<div class="orders__status-text mobile-visible">Доставлен</div>
+									<div class="orders__date">8 апреля 2054</div>
+									<div class="orders__num">№298456548 на 4 250₽</div>
+								</div>
+								<div class="orders__status"> 
+									<div class="orders__status-text mobile-hide">Текущий</div>
+									<div class="orders__status-icon orders__status-icon--delivered">
+										<svg width="21" height="23" viewBox="0 0 21 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M10.5 0C9.9 0 9.5 0.4 9.5 1C9.5 1 9.5 1 9.5 1.1C5 1.6 1.5 5.4 1.5 10V10.5H0.8C0.4 10.5 0 10.8 0 11.2C0 11.7 0.3 12 0.7 12H2.2H3.1C3 12.3 3 12.5 3 12.8C3 13.3 3.2 13.7 3.3 13.9C3.6 14.6 3.7 15.2 3.8 15.8C3.9 16.3 4 16.8 4.4 17.2L3.7 19.1C3.6 19.5 3.8 19.9 4.1 20.1C4.5 20.2 4.9 20 5.1 19.7L5.7 18L9.6 19.4L9.1 21C9 21.4 9.2 21.8 9.5 22C9.9 22.1 10.3 21.9 10.5 21.6L11.3 19.3C11.4 19.1 11.9 18.4 12.5 17.9C13.1 17.3 13.8 16.8 14.2 16.5C15.9 15.3 17.5 14.4 17.5 14.4C18.3 13.9 18.6 13 18.4 12.2H18.7H20.2C20.6 12.2 21 11.9 21 11.5C21 11.1 20.7 10.7 20.3 10.7H19.5V10C19.5 5.4 16 1.6 11.5 1.1C11.5 0.5 11.1 0 10.5 0ZM10.5 2.5C14.7 2.5 18 5.8 18 10V10.5H16.5H3V10C3 5.8 6.4 2.5 10.5 2.5ZM5.2 12H5.3C5.5 12 5.6 12.1 5.8 12.2C5.8 12.2 5.8 12.3 5.9 12.3C6 12.4 6.1 12.6 6.2 12.9C6.5 13.3 6.8 13.8 7.2 14.2C7.9 15 8.8 15 9.3 15C10.1 15 10.7 14.6 11.6 14.2C12.5 13.8 13.4 13.3 14.2 12.9C14.4 12.8 14.8 12.6 15.3 12.4C15.8 12.2 16.3 12 16.6 12C16.8 12 17 12.1 17.1 12.3C17.2 12.5 17.1 12.8 16.9 12.9C16.9 12.9 15.2 13.8 13.5 15.1C13 15.5 12.3 16.1 11.6 16.7C11.2 17.1 10.8 17.5 10.4 18L5.8 16.4C5.6 16.2 5.5 16 5.5 15.6C5.4 15.1 5.3 14.3 4.9 13.4C4.8 13.1 4.7 12.9 4.7 12.8C4.7 12.6 4.8 12.4 4.9 12.3C4.9 12.1 5 12 5.2 12ZM7.4 12H12.7C12.1 12.3 11.5 12.6 11 12.9C10.2 13.3 9.4 13.5 9.3 13.5C8.8 13.5 8.6 13.5 8.3 13.2C8.1 13 7.7 12.5 7.5 12.1C7.4 12.1 7.4 12 7.4 12ZM7.3 19.6C6.9 19.6 6.5 19.9 6.5 20.4C6.5 20.8 6.8 21.2 7.3 21.2C7.7 21.2 8.1 20.9 8.1 20.4C8 19.9 7.7 19.6 7.3 19.6Z" fill="white"></path>
+										</svg>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-				<!--	/navpage-->
+				<!--	/orders-->
 			</main>
 			<!-- footer-->
 			<footer class="footer">
