--- a/deposit.html
+++ b/deposit.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
-		<title>Навигация по страницам</title>
+		<title>Заказ отменен</title>
 		<link rel="stylesheet" href="css/libs/swiper-bundle.min.css">
 		<meta name="robots" content="noindex, nofollow">
 		<link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
 	<body> 
 		<div class="page"> 
 						<!-- header-->
-						<header class="header">
+						<header class="header mobile-hide">
 							<div class="wrapper">
 								<div class="header__burger hamburger hamburger--squeeze js-drop-btn" data-drop="mobile-menu">
 									<div class="hamburger-box">
@@ -105,23 +105,35 @@
 						</header>
 						<!--	/header-->
 			<main class="content"> 
-				<!-- navpage-->
-				<div class="navpage">
+				<!-- deposit-->
+				<div class="deposit">
 					<div class="wrapper">
-						<h1>Навигация по страницам</h1>
-						<ul> 
-							<li> <a href="home.html">Главная</a></li>
-							<li> <a href="agreement.html">Пользовательское соглашение</a></li>
-							<li> <a href="privacy.html">Политика конфиденциальности</a></li>
-							<li> <a href="orders.html">Мои заказы</a></li>
-							<li> <a href="current-order.html">Текущий заказ</a></li>
-							<li><a href="completed-order.html">Заказ выполнен</a></li>
-							<li> <a href="cancelled-order.html">Заказ отменен</a></li>
-							<li> <a href="deposit.html">Депозит</a></li>
-						</ul>
+						<!-- backtitle-->
+						<div class="backtitle"><a class="backtitle__arrow" href="#"> 
+								<svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
+								</svg></a>
+							<h1 class="backtitle__text">Депозит</h1><a class="backtitle__cross" href="#"> </a>
+						</div>
+						<!--	/backtitle-->
+						<div class="deposit__title">27 580₽</div>
+						<div class="deposit__text">на вашем счету</div>
+						<div class="deposit__ps">Можно пополнить еще на 1 930₽</div>
+						<div class="deposit__blackcard"> 
+							<div class="deposit__blackcard-icon"> 
+								<svg width="41" height="38" viewBox="0 0 41 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M21.7 0.00630911C19.9 -0.0936909 18.3 1.00631 17.5 2.50631H5.5C2.5 2.50631 0 5.00631 0 8.00631V12.0063C0 12.8063 0.7 13.5063 1.5 13.5063C2.3 13.5063 3 12.8063 3 12.0063V8.00631C3 6.60631 4.1 5.50631 5.5 5.50631H17V31.5063H5.5C4.1 31.5063 3 30.4063 3 29.0063V24.0063C3 23.2063 2.3 22.5063 1.5 22.5063C0.7 22.5063 0 23.2063 0 24.0063V29.0063C0 31.9063 2.2 34.2063 5 34.5063C5 35.6063 5.9 36.5063 7 36.5063C8.1 36.5063 9 35.6063 9 34.5063H17.5C18.3 36.2063 20.2 37.3063 22.2 37.0063L31.4 35.6063C31.8 36.2063 32.4 36.5063 33.1 36.5063C34 36.5063 34.8 35.9063 35 35.1063L35.4 35.0063C38.1 34.6063 40.1 32.3063 40.1 29.6063V7.50631C40.1 4.80631 38.1 2.50631 35.4 2.10631L22.2 0.00630911C22 0.00630911 21.9 0.00630911 21.7 0.00630911ZM21.4 3.00631C21.5 3.00631 21.6 3.00631 21.7 3.00631L34.8 5.00631C36.1 5.20631 37 6.20631 37 7.50631V29.6063C37 30.8063 36.1 31.9063 34.9 32.1063L21.8 34.1063C21 34.2063 20.3 33.7063 20.1 33.0063C20.1 32.9063 20.1 32.8063 20.1 32.7063V32.6063V4.60631C20 3.70631 20.6 3.00631 21.4 3.00631ZM29 9.50631C28 9.50631 27.1 9.90631 26.4 10.6063C25.7 11.3063 25.3 12.0063 24.9 12.8063C24.2 14.5063 23.9 16.5063 23.9 18.5063C23.9 20.5063 24.2 22.6063 24.9 24.2063C25.2 25.0063 25.7 25.8063 26.4 26.4063C27.1 27.0063 28 27.5063 29 27.5063C30 27.5063 30.9 27.1063 31.6 26.4063C32.3 25.8063 32.7 25.0063 33.1 24.2063C33.8 22.5063 34.1 20.5063 34.1 18.5063C34.1 16.5063 33.8 14.4063 33.1 12.8063C32.8 12.0063 32.3 11.2063 31.6 10.6063C30.9 10.0063 30 9.50631 29 9.50631ZM8.5 11.5063C7.7 11.5063 7 12.2063 7 13.0063C7 13.4063 7.2 13.8063 7.5 14.1063L9.9 16.5063H1.5C0.7 16.5063 0 17.2063 0 18.0063C0 18.8063 0.7 19.5063 1.5 19.5063H9.9L7.5 22.0063C6.9 22.6063 6.9 23.5063 7.5 24.1063C8.1 24.7063 9 24.7063 9.6 24.1063L14.6 19.1063C15.2 18.5063 15.2 17.6063 14.6 17.0063L9.6 12.0063C9.3 11.7063 8.9 11.5063 8.5 11.5063ZM29 12.5063C29.2 12.5063 29.3 12.5063 29.5 12.7063C29.7 12.9063 30 13.3063 30.2 13.9063C30.7 15.0063 31 16.8063 31 18.5063C31 20.2063 30.7 21.9063 30.2 23.1063C30 23.7063 29.7 24.1063 29.5 24.3063C29.3 24.5063 29.2 24.5063 29 24.5063C28.8 24.5063 28.7 24.5063 28.5 24.3063C28.3 24.1063 28 23.7063 27.8 23.1063C27.3 22.0063 27 20.2063 27 18.5063C27 16.8063 27.3 15.1063 27.8 13.9063C28 13.3063 28.3 12.9063 28.5 12.7063C28.7 12.5063 28.8 12.5063 29 12.5063Z" fill="white"></path>
+								</svg>
+							</div>
+							<div class="deposit__blackcard-title">Мы добавим</div>
+							<div class="deposit__blackcard-price">193₽</div>
+							<div class="deposit__blackcard-text">Помните, к каждому поплнению мы добавляем от себя 10%</div><a class="deposit__blackcard-btn" href="#">Пополнить депозит</a>
+						</div>
 					</div>
 				</div>
-				<!--	/navpage-->
+				<!--	/deposit-->
 			</main>
 			<!-- footer-->
 			<footer class="footer">
