--- a/deposit.html
+++ b/deposit.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
-		<title>Заказ отменен</title>
+		<title>Депозит</title>
 		<link rel="stylesheet" href="css/libs/swiper-bundle.min.css">
 		<meta name="robots" content="noindex, nofollow">
 		<link rel="stylesheet" href="css/style.css">
@@ -109,13 +109,13 @@
 				<div class="deposit">
 					<div class="wrapper">
 						<!-- backtitle-->
-						<div class="backtitle"><a class="backtitle__arrow" href="#"> 
+						<div class="backtitle"><a class="backtitle__arrow" href="home.html"> 
 								<svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 								</svg></a>
-							<h1 class="backtitle__text">Депозит</h1><a class="backtitle__cross" href="#"> </a>
+							<h1 class="backtitle__text">Депозит</h1><a class="backtitle__cross" href="home.html"> </a>
 						</div>
 						<!--	/backtitle-->
 						<div class="deposit__title">27 580₽</div>
@@ -129,7 +129,7 @@
 							</div>
 							<div class="deposit__blackcard-title">Мы добавим</div>
 							<div class="deposit__blackcard-price">193₽</div>
-							<div class="deposit__blackcard-text">Помните, к каждому поплнению мы добавляем от себя 10%</div><a class="deposit__blackcard-btn" href="#">Пополнить депозит</a>
+							<div class="deposit__blackcard-text">Помните, к каждому поплнению мы добавляем от себя 10%</div><a class="deposit__blackcard-btn" href="bankcard.html">Пополнить депозит</a>
 						</div>
 					</div>
 				</div>
