--- a/orders.html
+++ b/orders.html
@@ -109,13 +109,13 @@
 				<div class="orders">
 					<div class="wrapper"> 
 						<!-- backtitle-->
-						<div class="backtitle"><a class="backtitle__arrow" href="#"> 
+						<div class="backtitle"><a class="backtitle__arrow" href="home.html"> 
 								<svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 								</svg></a>
-							<h1 class="backtitle__text">Мои заказы</h1><a class="backtitle__cross" href="#"> </a>
+							<h1 class="backtitle__text">Мои заказы</h1><a class="backtitle__cross" href="home.html"> </a>
 						</div>
 						<!--	/backtitle-->
 						<form class="orders__filter" action="#"> 
@@ -132,7 +132,7 @@
 								<label for="ordersCancelled">Отменены</label>
 							</div>
 						</form>
-						<div class="orders__items"> <a class="orders__item" href="#"> 
+						<div class="orders__items"> <a class="orders__item" href="current-order.html"> 
 								<div class="orders__item-content"> 
 									<div class="orders__status-text mobile-visible">Текущий</div>
 									<div class="orders__date">8 апреля 2054</div>
@@ -145,7 +145,7 @@
 											<path d="M3.8 0C2.5 0 1.5 1 1.5 2.3V14H0.8C0.3 14 0 14.3 0 14.8V15.8C0 17.5 1.5 19 3.3 19H14.3C16.1 19 17.6 17.5 17.6 15.7V2.3C17.6 1.1 16.6 0 15.3 0H3.8ZM3.8 1.5H15.3C15.7 1.5 16.1 1.8 16.1 2.3V15.8C16.1 16.8 15.3 17.6 14.3 17.6C13.3 17.6 12.5 16.8 12.5 15.8V14.8C12.5 14.4 12.2 14.1 11.7 14H3V2.3C3 1.8 3.3 1.5 3.8 1.5ZM5.8 4C5.3 4 5 4.3 5 4.8C5 5.3 5.3 5.6 5.8 5.6C6.2 5.6 6.6 5.3 6.6 4.8C6.6 4.3 6.2 4 5.8 4ZM8.3 4C7.8 4 7.5 4.3 7.5 4.7C7.5 5.1 7.8 5.5 8.2 5.5H13.2C13.6 5.5 14 5.2 14 4.8C14 4.4 13.7 4 13.3 4H8.3ZM5.8 7C5.3 7 5 7.3 5 7.8C5 8.3 5.3 8.6 5.8 8.6C6.2 8.6 6.6 8.3 6.6 7.8C6.6 7.3 6.2 7 5.8 7ZM8.3 7C7.8 7 7.5 7.3 7.5 7.7C7.5 8.1 7.8 8.5 8.2 8.5H13.2C13.6 8.5 14 8.2 14 7.8C14 7.3 13.7 7 13.3 7H8.3ZM5.8 10C5.3 10 5 10.3 5 10.8C5 11.3 5.3 11.6 5.8 11.6C6.2 11.6 6.6 11.3 6.6 10.8C6.6 10.3 6.2 10 5.8 10ZM8.3 10C7.9 10 7.5 10.3 7.5 10.7C7.5 11.1 7.8 11.5 8.2 11.5H13.2C13.6 11.5 14 11.2 14 10.8C14 10.4 13.7 10 13.3 10H8.3ZM1.5 15.5H11V15.8C11 16.5 11.2 17 11.6 17.6H3.3C2.3 17.6 1.5 16.8 1.5 15.8V15.5Z" fill="white"></path>
 										</svg>
 									</div>
-								</div></a><a class="orders__item" href="#"> 
+								</div></a><a class="orders__item" href="cancelled-order.html"> 
 								<div class="orders__item-content"> 
 									<div class="orders__status-text mobile-visible">Отменен</div>
 									<div class="orders__date">8 апреля 2054</div>
@@ -158,7 +158,7 @@
 											<path d="M10 0C4.5 0 0 4.5 0 10C0 15.5 4.5 20 10 20C15.5 20 20 15.5 20 10C20 4.5 15.5 0 10 0ZM10 1.5C14.7 1.5 18.5 5.3 18.5 10C18.5 14.7 14.7 18.5 10 18.5C5.3 18.5 1.5 14.7 1.5 10C1.5 5.3 5.3 1.5 10 1.5ZM13.2 6C13 6 12.8 6.1 12.7 6.2L10 8.9L7.3 6.2C7.1 6.1 6.9 6 6.7 6C6.3 6 6 6.3 6 6.7C6 6.9 6.1 7.1 6.2 7.2L8.9 10L6.2 12.7C5.9 13 5.9 13.5 6.2 13.8C6.5 14.1 7 14.1 7.3 13.8L10 11.1L12.7 13.8C13 14.1 13.5 14.1 13.8 13.8C14.1 13.5 14.1 13 13.8 12.7L11.1 10L13.8 7.3C14.1 7 14.1 6.5 13.8 6.2C13.7 6.1 13.5 6 13.2 6Z" fill="white"></path>
 										</svg>
 									</div>
-								</div></a><a class="orders__item" href="#"> 
+								</div></a><a class="orders__item" href="completed-order.html"> 
 								<div class="orders__item-content"> 
 									<div class="orders__status-text mobile-visible">Доставлен</div>
 									<div class="orders__date">8 апреля 2054</div>
