--- a/privacy.html
+++ b/privacy.html
@@ -109,13 +109,13 @@
 				<div class="textblock">
 					<div class="wrapper"> 
 						<!-- backtitle-->
-						<div class="backtitle"><a class="backtitle__arrow" href="#"> 
+						<div class="backtitle"><a class="backtitle__arrow" href="home.html"> 
 								<svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 									<path d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"></path>
 								</svg></a>
-							<h1 class="backtitle__text">Политика конфиденциальности</h1><a class="backtitle__cross" href="#"> </a>
+							<h1 class="backtitle__text">Политика конфиденциальности</h1><a class="backtitle__cross" href="home.html"> </a>
 						</div>
 						<!--	/backtitle-->
 						<div class="textblock__text">
